# FireBreath

./: .gitattributes  .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  .travis.yml  BSD.html  CMakeLists.txt  Doxyfile  FireBreathWin.sln  FireBreathWin_vs2005.sln  LGPL.html  License.txt  PluginIncludes.cmake  README.md  addnewlines  common.cmd  common.sh  fbgen.py  fbgen_py3.py  fixtabs  fwh-chrome-manifest.json  genproject.cmd  pluginProjects.cmake  prep2005.cmd  prep2008.cmd  prep2008x64.cmd  prep2010.cmd  prep2010x64.cmd  prep2012.cmd  prep2012x64.cmd  prep2013.cmd  prep2013x64.cmd  prep2015.cmd  prep2015x64.cmd  prep2017.cmd  prep2017x64.cmd  prepVisualStudio.cmd  prepcodeblocks.sh  (+6 more)
NpapiPluginTest/: CMakeLists.txt  NPJavascriptObjectTest.h  NpapiPluginTest.cpp  NpapiPluginTest.vcproj  NpapiPluginTest_vs2005.vcproj
cmake/: CMakeLists.txt  CommonPluginConfig.cmake  FixFragment.xslt  FixFragment_HKCU.xslt  FixFragment_HKCU_x64.xslt  FixFragment_HKCU_x86.xslt  FixFragment_HKLM.xslt  FixFragment_HKLM_x64.xslt  FixFragment_HKLM_x86.xslt  GenericConfigureFileScript.cmake  Mac.cmake  PluginConfigDefaults.cmake  README.txt  Win.cmake  X11.cmake  buildconfig.cmake  chrome.cmake  common.cmake  configure_template.cmake  dummy.cpp  fix-wix.py  genproject.cmake  makeid.py  options.cmake  patch_xcode.py  paths.cmake  pluginProjects.cmake  projectConfig_main.cmake.in  wix.cmake  xpi.cmake
src/ActiveXCore/: AXPromise.cpp  AXPromise.h  ActiveXAsyncDrawService.cpp  ActiveXAsyncDrawService.h  ActiveXBrowserHost.cpp  ActiveXBrowserHost.h  ActiveXFactoryDefinitions.h  CMakeLists.txt  COMJavascriptObject.h  ComPromise.cpp  ComPromise.h  ComVariantUtil.h  FBControl.cpp  FBControl.h  IDispatchAPI.cpp  IDispatchAPI.h  JSAPI_IDispatchEx.cpp  JSAPI_IDispatchEx.h  README.txt  axstream.cpp  axstream.h  axstream_impl.cpp  axstream_impl.h  axutil.cpp  axutil.h  precompiled_headers.h  registrymap.hpp
src/ActiveXPlugin/: ActiveXBrowserHost.cpp  ActiveXBrowserHost.h  CMakeLists.txt  COMJavascriptObject.h  ComVariantUtil.h  FBControl.cpp  FBControl.h  FireBreathWin.cpp  IDispatchAPI.cpp  IDispatchAPI.h  JSAPI_IDispatchEx.h  README.txt  axmain.cpp  axmain.h  axstream.cpp  axstream.h  axstream_impl.cpp  axstream_impl.h  axutil.cpp  axutil.h  dlldatax.c  dlldatax.h  registrymap.hpp
src/ActiveXPluginTest/: ActiveXPluginTest.cpp  CMakeLists.txt  COMJavascriptObjectTest.h  TestAPI.cpp  TestAPI.h
src/FireWyrm/: AlienWyrmling.cpp  AlienWyrmling.h  CMakeLists.txt  FireWyrm.h  LocalWyrmling.cpp  LocalWyrmling.h  WyrmBrowserHost.cpp  WyrmBrowserHost.h  WyrmColony.cpp  WyrmColony.h  WyrmPlugin.cpp  WyrmPlugin.h  WyrmPluginModule.cpp  WyrmPluginModule.h  WyrmSpawn.cpp  WyrmSpawn.h  WyrmVariantUtil.cpp  WyrmVariantUtil.h
src/NPAPIHost/: CMakeLists.txt  NPAPIHost.h  NpBrowserHostFuncs.cpp  NpResourceHostFuncs.cpp  NpapiHost.cpp  NpapiHost.h  NpruntimeHostFuncs.cpp
src/NativeMessageHost/: CMakeLists.txt  HostMain.cpp  HostMain.h  MainLoop.cpp  MainLoop.h  MessageExamples.txt  PluginLoader.h  PluginLoaderWin.cpp  PluginLoaderWin.h  ReadLoop.cpp  ReadLoop.h
src/NpapiCore/: CMakeLists.txt  NPJavascriptObject.cpp  NPJavascriptObject.h  NPObjectAPI.cpp  NPObjectAPI.h  NPPromise.cpp  NPPromise.h  NPVariantUtil.h  NpapiBrowserHost.cpp  NpapiBrowserHost.h  NpapiFactoryDefinitions.h  NpapiPlugin.cpp  NpapiPlugin.h  NpapiPluginFactory.h  NpapiPluginModule.cpp  NpapiPluginModule.h  NpapiPluginModule_NPP.cpp  NpapiStream.cpp  NpapiStream.h  NpapiTypes.cpp  NpapiTypes.h  precompiled_headers.h
src/NpapiPlugin/: CMakeLists.txt  NPJavascriptObject.cpp  NPJavascriptObject.h  NPObjectAPI.cpp  NPObjectAPI.h  NPVariantUtil.h  NpapiBrowserHost.cpp  NpapiBrowserHost.h  NpapiFactoryDefinitions.h  NpapiPlugin.cpp  NpapiPlugin.h  NpapiPluginFactory.h  NpapiPluginModule.cpp  NpapiPluginModule.h  NpapiPluginModule_NPP.cpp  NpapiStream.cpp  NpapiStream.h  NpapiTypes.cpp  NpapiTypes.h
src/NpapiPluginTest/: CMakeLists.txt  NPJavascriptObjectTest.h  NpapiPluginTest.cpp  TestPlugin.h
src/PluginAuto/: CMakeLists.txt  DONTTOUCHTHISPROJECT.txt  PluginInfo.cpp  README.txt  WyrmMain.cpp  precompiled_headers.h
src/PluginCommon/: CMakeLists.txt  PluginInfo.cpp  PluginInfo.h  logging.h
src/PluginCore/: AsyncDrawService.h  BrowserPlugin.cpp  BrowserPlugin.h  BrowserStream.cpp  BrowserStream.h  BrowserStreamManager.cpp  BrowserStreamManager.h  BrowserStreamRequest.h  CMakeLists.txt  ConstructDefaultPluginWindows.h  DefaultBrowserStreamHandler.cpp  DefaultBrowserStreamHandler.h  FactoryBase.cpp  FactoryBase.h  FactoryDefinitions.h  PluginCore.cpp  PluginCore.h  PluginEvent.h  PluginEventSink.cpp  PluginEventSink.h  PluginEventSource.cpp  PluginEventSource.h  PluginInfo.h  PluginWindow.cpp  PluginWindow.h  PluginWindowForwardDecl.h  SimpleStreamHelper.cpp  SimpleStreamHelper.h  SystemHelpers.h  SystemProxyDetector.h  ThreadInterrupt.h  Timer.cpp  Timer.h  TimerService.cpp  TimerService.h  precompiled_headers.h
src/PluginWindow/: CMakeLists.txt  ConstructDefaultPluginWindows.h  PluginWindow.cpp  PluginWindow.h  PluginWindowForwardDecl.h
src/ScriptingCore/: APITypes.h  AsyncBrowserCall.cpp  AsyncBrowserCall.h  AsyncFunctionCall.h  AutoPtr.h  BrowserHost.cpp  BrowserHost.h  BrowserHostWrapper.cpp  BrowserHostWrapper.h  BrowserObjectAPI.cpp  BrowserObjectAPI.h  CMakeLists.txt  ConverterUtils.h  CrossThreadCall.cpp  CrossThreadCall.h  DOM.h  Deferred.cpp  Deferred.h  DeferredUtils.cpp  DeferredUtils.h  EventHandlerObject.cpp  EventHandlerObject.h  FBPointers.h  FactoryDefinitions.h  JSAPI.cpp  JSAPI.h  JSAPIAuto.cpp  JSAPIAuto.h  JSAPIImpl.cpp  JSAPIImpl.h  JSAPIProxy.cpp  JSAPIProxy.h  JSAPISecure.cpp  JSAPISecure.h  JSAPISecureProxy.cpp  JSAPISecureProxy.h  JSAPISimple.cpp  JSAPISimple.h  JSArray.cpp  JSArray.h  (+36 more)
src/ScriptingCoreTest/: CMakeLists.txt  ScriptingCoreTest.cpp  TestJSAPIAuto.h  TypeIDMap_test.h  autoptr_test.h  fake_jsarray.h  fake_jsmap.h  jsapi_test.h  jsapiauto_test.h  jsarray_test.h  jscallback_test.h  meta_test.h  variant_list_test.h  variant_map_test.h  variant_test.h
src/WebKitCore/: CMakeLists.txt  JSObjectRefAPI.h  (+6 more)
(+827 files in other folders)
